# vetra-client

./: .env  .env.example  .env.load.example  .env.smoke.example  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.codebase-memory/: adr.md
docs/: directed_call_protocol_v1.md
docs/deploy/: nginx.md
docs/design/: vetra-call-dock-reference.html
scripts/: check-release-tauri.mjs  check-release.mjs  load-vetra.mjs  release-call-runtime.mjs  release-call-runtime.test.ts  run-release-build.mjs  run-with-desktop-env.mjs  run-with-desktop-env.test.ts  shared.mjs  smoke-vetra.mjs
src/: App.test.tsx  App.tsx  channel-panel.css  main.test.tsx  main.tsx  styles.css  themes.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: auth.ts  base.test.ts  base.ts  gifs.ts  giphy.test.ts  giphy.ts  messages.ts  rooms.ts  servers.ts  stickers.ts
src/features/registration/: AuthPage.test.tsx  AuthPage.tsx
src/hooks/: useAuthHydration.ts  useMessagePagination.ts  useMessages.ts  useRoomMessages.ts  useServerMembers.ts  useSocketEvents.ts  useUserSearch.ts
src/services/: api.ts  notifications.test.ts  notifications.ts  socket.test.ts  socket.ts
src/shared/components/: AuthenticatedImage.test.tsx  AuthenticatedImage.tsx  AuthenticatedVideo.test.tsx  AuthenticatedVideo.tsx  (+7 more)
src/store/: appStore.ts  index.test.ts  index.ts
src/styles/: variables.css
src/types/: index.ts
src/utils/: formatDate.ts
(+293 files in other folders)
