[package]
name = "client"
version = "0.1.0"
description = "Vetra Desktop Client"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
