[package]
name = "vetra"
version = "0.1.0"
description = "Vetra Desktop Client"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vetra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"

# Temporary local Tao override for the Windows fullscreen client-area fix.
# See third-party/README.md for provenance and removal criteria.
[patch.crates-io]
tao = { path = "third-party/tao-0.35.3" }
